tests/ui/multiple-proof-attributes/expected
error: only one '#[kani::proof]' attribute is allowed per harness\
main.rs\
|\
| #[kani::proof]\
| ^^^^^^^^^^^^^^\
|\
